# platevault

./: .apm-fix-settings.py  .gitattributes  .gitignore  .gitleaks.toml  .lsp.json  .mcp.json  .mcp.tauri.env.example  .pre-commit-config.yaml  .scratch.md  .typos.toml  31599-reported-1.md  AGENTS.md  BODY.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DESIGN.md  DOLT_REMOTE.md  PRODUCT.md  README.md  apm.lock.yaml  apm.yml  bacon.toml  biome.json  clippy.toml  deny.toml  gates.yaml  justfile  local-branches.txt  local-quick-index.txt  local-worktrees.txt  ltvtjtkqdsa0mhiooncgv34sskmvgn4b.darc  manifest  mise.toml  package.json  pnpm-lock.yaml  release-please-config.json  t  tsconfig.json
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: data_dir.rs  lib.rs  main.rs  resolve_cache.rs  watcher.rs
apps/desktop/src-tauri/tests/: artifact_watcher_concurrency.rs  artifact_watcher_live_drop.rs  artifact_watcher_missing_reconciliation.rs  artifact_watcher_subfolder_reconciliation.rs  bindings.rs  commands.rs  onboarding_subscriber_integration.rs
crates/app/calibration/: Cargo.toml
crates/app/calibration/src/: audit_ids.rs  caches.rs  equipment.rs  lib.rs  matching.rs  tolerances.rs
crates/app/core/: Cargo.toml
crates/app/core/src/: archive_generator.rs  artifact.rs  audit_ids.rs  caches.rs  calibration.rs  calibration_archive_generator.rs  catalogs.rs  cleanup_generator.rs  dev_contracts.rs  entity_names.rs  equipment.rs  errors.rs  first_run.rs  frame_inventory.rs  framing.rs  guided_flow.rs  inbox_plan.rs  inbox_scan.rs  ingest_resolution.rs  inventory.rs  ledger_use_case.rs  lib.rs  lifecycle_use_case.rs  log_stream.rs  native.rs  onboarding.rs  path_set.rs  patterns.rs  plan_apply.rs  plan_free_space.rs  plans.rs  prepared_views.rs  project_create.rs  project_health.rs  project_manifests.rs  project_notes.rs  project_setup.rs  protection.rs  resolver_settings.rs  search.rs  (+10 more)
crates/app/core/tests/: attribution_integration.rs  calibration_integration.rs  calibration_missing_flag_integration.rs  confirm_master_integration.rs  first_run_integration.rs  inbox_lifecycle_integration.rs  ingest_sessions_integration.rs  ingestion_scan_settings_integration.rs  inventory_camera_integration.rs  lifecycle_canonical.rs  locale_settings_gate.rs  onboarding_seed_integration.rs  plan_apply_audit_integration.rs  plan_apply_lifecycle_integration.rs  plan_resume_integration.rs  project_source_missing_block.rs  project_source_snapshots.rs  projects_integration.rs  resolution_e2e.rs  scan_masters_integration.rs  session_materialization_integration.rs  sessions_integration.rs  settings_logs_integration.rs  simbad_resolution_integration.rs  source_view_generation_us1.rs  source_view_generation_us3_regenerate.rs  source_view_verify_us4.rs  startup_wiring_regression.rs  target_search_seeded.rs  targets_integration.rs  tools_artifacts_integration.rs  transition_apply.rs  us1_coverage_smoke.rs  view_removal_regeneration_e2e.rs  workflow_run_manifest_e2e.rs
crates/app/errors/: Cargo.toml
crates/app/errors/src/: lib.rs
crates/app/inbox/: Cargo.toml
crates/app/inbox/src/: attribution.rs  classify.rs  cone_search.rs  confirm.rs  grouping.rs  lib.rs  metadata.rs  plan_listener.rs  property_registry.rs  reclassify.rs  repair.rs  scan.rs  signature.rs  stats.rs  target_recommendations.rs
crates/app/lifecycle/: Cargo.toml
crates/app/projects/: Cargo.toml
crates/app/settings/: Cargo.toml
crates/app/targets/: Cargo.toml
crates/audit/: Cargo.toml
crates/audit-types/: Cargo.toml
crates/audit-types/src/: event.rs  event_bus.rs  lib.rs  publisher.rs
crates/audit/src/: bus.rs  event.rs  event_bus.rs  lib.rs  pruner.rs  stale_propagator.rs
crates/calibration/core/: Cargo.toml
crates/contracts/core/: Cargo.toml
crates/domain/core/: Cargo.toml
crates/e2e-tests/: Cargo.toml  README.md
crates/e2e-tests/src/: lib.rs
crates/e2e-tests/tests/: archive_journeys.rs  calibration_ui_journeys.rs  cleanup_protection_gate_journey.rs  inbox_ui_journeys.rs  inventory_journeys.rs  journeys.rs  lifecycle_ui_journeys.rs  onboarding_journey.rs  plan_review_overlay_journeys.rs  sessions_journeys.rs  settings_journeys.rs  smoke.rs  source_view_journeys.rs  targets_journeys.rs
crates/fs/executor/: Cargo.toml
crates/fs/inventory/: Cargo.toml
crates/patterns/: Cargo.toml
crates/patterns/src/: lib.rs  per_type.rs  registry.rs  resolver.rs  sanitize.rs  validator.rs
crates/patterns/tests/: pattern_integration.rs  proptest_patterns.rs
crates/persistence/core/: Cargo.toml
crates/persistence/db/: Cargo.toml  README.md  migrations
crates/persistence/inbox/: Cargo.toml
crates/persistence/lifecycle/: Cargo.toml
crates/persistence/plans/: Cargo.toml
crates/persistence/sessions/: Cargo.toml
crates/persistence/targets/: Cargo.toml
crates/safe-filename/: Cargo.toml
crates/safe-filename/src/: lib.rs
crates/sessions/: Cargo.toml
crates/sessions/src/: clustering.rs  identity.rs  key.rs  lib.rs  observing_night.rs  optic_train.rs
crates/targeting/: Cargo.toml
crates/targeting/catalogs/: Cargo.toml
crates/targeting/resolver/: Cargo.toml
crates/targeting/src/: aliases.rs  astro_format.rs  catalog.rs  coords.rs  fixture.rs  identity.rs  lib.rs  load.rs  matching.rs  normalize.rs  relations.rs  resolve.rs
crates/targeting/tests/: seed_load_timing.rs  simbad_live.rs
tests/contract/: Cargo.toml  audit_first_run_completed_test.rs  catalog_entry_file_test.rs  catalog_manifest_parity_test.rs  contract_jsonschema_roundtrip.rs  contract_schema_parity.rs  envelope_specta_schemars_agreement.rs  firstrun_complete_test.rs  firstrun_restart_test.rs  library_inventory_contract.rs  native_contracts_test.rs  plan_state_sql_parity.rs  project_tool_enum_parity.rs  roots_register_batch_test.rs  roots_register_test.rs  spec062_portable_contracts.rs  target_resolution_parity_test.rs  workflow_run_completed_test.rs
tests/contract/support/: envelope_schema_parity.rs
(+3231 files in other folders)
