[workspace]
resolver = "2"
members = [
  "apps/desktop/src-tauri",
  "crates/app/core",
  "crates/audit",
  "crates/calibration/core",
  "crates/contracts/core",
  "crates/domain/core",
  "crates/fs/executor",
  "crates/fs/inventory",
  "crates/fs/planner",
  "crates/metadata/core",
  "crates/metadata/fits",
  "crates/metadata/video",
  "crates/metadata/xisf",
  "crates/patterns",
  "crates/persistence/db",
  "crates/project/structure",
  "crates/sessions",
  "crates/targeting",
  "crates/targeting/catalogs",
  "crates/workflow/artifacts",
  "crates/workflow/profiles",
  "tests/contract",
]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = ""

[workspace.dependencies]
async-trait = "0.1"
hex = "0.4"
minisign = { version = "0.7", default-features = false }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
quick-xml = "0.39"
sha2 = "0.10"
tempfile = "3"
unicode-normalization = "0.1"
unicode-security = "0.1"
# Ratified stack (spec 002 2026-05-23 — wired with network access):
#   sqlx 0.9 renamed runtime-tokio-rustls -> runtime-tokio + tls-rustls (two separate features).
#   specta is on the 2.x rc track; specta-typescript and tauri-specta follow the same rc series.
#   schemars stays on 0.8 (uuid1 feature maps to uuid crate v1; upgrading to 1.x is a separate task).
sqlx = { version = "0.9", default-features = false, features = ["sqlite", "runtime-tokio", "tls-rustls", "macros", "migrate", "uuid", "time", "json"] }
specta = { version = "2.0.0-rc.25", features = ["derive", "uuid", "time", "serde_json"] }
specta-typescript = "0.0.12"
tauri = { version = "2.11", default-features = false, features = ["wry"] }
tauri-build = { version = "2.6", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-specta = { version = "2.0.0-rc.25", features = ["typescript"] }
schemars = { version = "0.8", features = ["uuid1"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }
trash = "5.2"
tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros", "fs"] }
tracing = "0.1"
uuid = { version = "1", features = ["serde", "v4"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
