[workspace]
resolver = "2"
members = [
  "apps/desktop/src-tauri",
  "crates/app/calibration",
  "crates/app/core",
  "crates/app/errors",
  "crates/app/inbox",
  "crates/app/lifecycle",
  "crates/app/projects",
  "crates/app/settings",
  "crates/app/targets",
  "crates/audit",
  "crates/calibration/core",
  "crates/calibration/master-detect",
  "crates/contracts/core",
  "crates/e2e-tests",
  "crates/domain/core",
  "crates/fs/executor",
  "crates/fs/inventory",
  "crates/fs/planner",
  "crates/metadata/core",
  "crates/metadata/fits",
  "crates/metadata/video",
  "crates/metadata/xisf",
  "crates/patterns",
  "crates/persistence/db",
  "crates/project/structure",
  "crates/sessions",
  "crates/targeting",
  "crates/targeting/resolver",
  "crates/tools/seed-builder",
  "crates/workflow/artifacts",
  "crates/workflow/profiles",
  "tests/contract",
]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = ""

[workspace.dependencies]
async-trait = "0.1"
hex = "0.4"
minisign = { version = "0.7", default-features = false }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
quick-xml = "0.39"
sha2 = "0.10"
tempfile = "3"
unicode-normalization = "0.1"
unicode-security = "0.1"
# Ratified stack (spec 002 2026-05-23 — wired with network access):
#   sqlx 0.9 renamed runtime-tokio-rustls -> runtime-tokio + tls-rustls (two separate features).
#   specta is on the 2.x rc track; specta-typescript and tauri-specta follow the same rc series.
#   schemars 1.x emits JSON-Schema draft-2020-12 (matching the canonical contract dialect);
#   the uuid1 feature still maps to uuid crate v1 (spec 042 CB2 / T116a).
sqlx = { version = "0.9", default-features = false, features = ["sqlite", "runtime-tokio", "tls-rustls", "macros", "migrate", "uuid", "time", "json"] }
specta = { version = "2.0.0-rc.25", features = ["derive", "uuid", "time", "serde_json"] }
specta-typescript = "0.0.12"
tauri = { version = "2.11", default-features = false, features = ["wry"] }
tauri-build = { version = "2.6", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
# Tauri MCP bridge plugin (@hypothesi). Dev/debug-only surface, registered behind
# `#[cfg(debug_assertions)]`; runs a WebSocket server on 0.0.0.0:9223 for the
# @hypothesi/tauri-mcp-server MCP server. Requires the dev-only tauri.dev.conf.json
# overlay (withGlobalTauri).
tauri-plugin-mcp-bridge = "0.11"
tauri-specta = { version = "2.0.0-rc.25", features = ["typescript"] }
schemars = { version = "1", features = ["uuid1"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }
trash = "5.2"
tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros", "fs"] }
tracing = "0.1"
uuid = { version = "1", features = ["serde", "v4"] }
# Spec 042 stdlib adoption (not yet wired — pinned for staged per-story adoption):
anyhow = "1"
byteorder = "1"
camino = { version = "1", features = ["serde1"] }
csv = "1"
dashmap = "6"
globset = "0.4"
itertools = "0.14"
moka = { version = "0.12", features = ["sync"] }
path-clean = "1"
percent-encoding = "2"
strum = { version = "0.27", features = ["derive"] }
strum_macros = "0.27"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# dev-dependencies (referenced via [dev-dependencies] in consuming crates):
proptest = "1"
rstest = "0.26"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
