[workspace]
resolver = "2"
members = [
  "apps/desktop/src-tauri",
  "crates/app/cache",
  "crates/app/calibration",
  "crates/app/core",
  "crates/app/errors",
  "crates/app/inbox",
  "crates/app/lifecycle",
  "crates/app/projects",
  "crates/app/settings",
  "crates/app/targets",
  "crates/audit",
  "crates/audit-types",
  "crates/calibration/core",
  "crates/calibration/master-detect",
  "crates/contracts/core",
  "crates/e2e-tests",
  "crates/domain/core",
  "crates/fs/executor",
  "crates/fs/inventory",
  "crates/fs/pathsafe",
  "crates/metadata/core",
  "crates/metadata/fits",
  "crates/metadata/video",
  "crates/metadata/xisf",
  "crates/patterns",
  "crates/persistence/calibration",
  "crates/persistence/core",
  "crates/persistence/inbox",
  "crates/persistence/lifecycle",
  "crates/persistence/plans",
  "crates/persistence/sessions",
  "crates/persistence/targets",
  "crates/persistence/topology",
  "crates/project/structure",
  "crates/safe-filename",
  "crates/sessions",
  "crates/targeting",
  "crates/targeting/resolver",
  "crates/tools/perf-bench",
  "crates/tools/seed-builder",
  "crates/workflow/artifacts",
  "crates/workflow/profiles",
  "tests/contract",
]

[workspace.package]
edition = "2021"
license = "AGPL-3.0-only"
repository = ""

[workspace.dependencies]
async-trait = "0.1"
hex = "0.4"
minisign = { version = "0.7", default-features = false }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
quick-xml = "0.41"
sha2 = "0.10"
tempfile = "3"
unicode-normalization = "0.1"
unicode-security = "0.1"
# Ratified stack (spec 002 2026-05-23 — wired with network access):
#   sqlx 0.9 renamed runtime-tokio-rustls -> runtime-tokio + tls-rustls (two separate features).
#   specta is on the 2.x rc track; specta-typescript and tauri-specta follow the same rc series.
#   schemars 1.x emits JSON-Schema draft-2020-12 (matching the canonical contract dialect);
#   the uuid1 feature still maps to uuid crate v1 (spec 042 CB2 / T116a).
sqlx = { version = "0.9", default-features = false, features = ["sqlite", "runtime-tokio", "tls-rustls", "macros", "migrate", "uuid", "time", "json"] }
# Dynamic query builder for the centralized persistence layer (persistence-layer
# hardening, infra scaffolding). sea-query is a PURE builder with NO sqlx
# dependency: it emits `(String, Values)` which we bind onto sqlx 0.9 ourselves.
# We deliberately do NOT use `sea-query-binder` — its current release pins
# sqlx 0.8 and lags our ratified sqlx 0.9, so it cannot bridge our stack.
# See docs/development/persistence-layer-hardening.md for the binding pattern.
sea-query = { version = "1", default-features = false, features = ["derive", "backend-sqlite"] }
specta = { version = "2.0.0-rc.25", features = ["derive", "uuid", "time", "serde_json"] }
specta-typescript = "0.0.12"
tauri = { version = "2.11", default-features = false, features = ["wry"] }
tauri-build = { version = "2.6", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
# Tauri MCP bridge plugin (@hypothesi). Dev/debug-only surface, registered behind
# `#[cfg(debug_assertions)]`; runs a WebSocket server on 0.0.0.0:9223 for the
# @hypothesi/tauri-mcp-server MCP server. Requires the dev-only tauri.dev.conf.json
# overlay (withGlobalTauri).
tauri-plugin-mcp-bridge = "0.11"
# Spec 051 shell integration plugins (versions confirmed against crates.io
# 2026-07-05; same tauri-apps/plugins-workspace release train as tauri 2.11.2,
# except tauri-plugin-prevent-default which is community-maintained).
tauri-plugin-single-instance = "2.4.2"
tauri-plugin-window-state = "2.4.1"
tauri-plugin-log = "2.8.0"
tauri-plugin-notification = "2.3.3"
tauri-plugin-updater = "2.10.1"
# Needed by the updater's relaunch-to-apply step (`process:default`
# capability); matches the `@tauri-apps/plugin-process` npm version already
# pinned in `apps/desktop/package.json`.
tauri-plugin-process = "2.3.1"
tauri-plugin-prevent-default = "5.0.2"
tauri-specta = { version = "2.0.0-rc.25", features = ["typescript"] }
schemars = { version = "1", features = ["uuid1"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "parsing", "serde", "serde-well-known"] }
trash = "5.2"
tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros", "fs"] }
tracing = "0.1"
tracing-appender = "0.2.5"
uuid = { version = "1", features = ["serde", "v4"] }
# Spec 042 stdlib adoption (not yet wired — pinned for staged per-story adoption):
anyhow = "1"
byteorder = "1"
camino = { version = "1", features = ["serde1"] }
csv = "1"
dashmap = "6"
futures-util = "0.3"
globset = "0.4"
itertools = "0.14"
moka = { version = "0.12", features = ["sync"] }
path-clean = "1"
percent-encoding = "2"
strum = { version = "0.27", features = ["derive"] }
strum_macros = "0.27"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# dev-dependencies (referenced via [dev-dependencies] in consuming crates):
proptest = "1"
rstest = "0.26"

# Release profile: thin LTO reduces binary size and cross-crate inlining cost
# without the full-program ThinLTO latency of lto="fat". codegen-units=1 lets
# LLVM see the whole crate at once, which recovers missed inlining opportunities
# that remain with the default 16 parallel units.
# panic=abort is deliberately excluded: task-level panic containment matters
# more than the ~5% binary-size saving (decision recorded in bead astro-plan-kyo7.15).
[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
# Groups carry priority -1 so the explicit per-lint overrides below win.
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# DB boundary secondary signal. The `disallowed-methods` list in clippy.toml
# flags raw sqlx calls, but it CANNOT be path-scoped to exclude the sanctioned
# crates/persistence/db crate, so leaving it at `warn` under CI's `-D warnings`
# would break the build on today's ~200 legitimate production sites. We hold it
# at `allow` here: the authoritative ratchet is scripts/check-db-boundary.sh
# (`just db-boundary`). Developers can surface the clippy signal on demand with
#   cargo clippy -- -W clippy::disallowed_methods
# See docs/development/persistence-layer-hardening.md.
disallowed_methods = "allow"
# Cherry-picked nursery lints. The nursery GROUP is intentionally left off
# because its membership is unstable across Rust releases; individual lints are
# promoted here only after manual review of each suggestion class.
use_self = "warn"
redundant_pub_crate = "warn"
derive_partial_eq_without_eq = "warn"
redundant_clone = "warn"
needless_collect = "warn"
significant_drop_tightening = "warn"
or_fun_call = "warn"
