[package]
name = "audit_types"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

# Pure event/envelope/audit-log type definitions, split out of `audit` so
# `persistence_db` can depend on the types without depending on the `audit`
# crate's EventBus runtime (which itself depends on `persistence_db` for its
# SQL). See docs/development/persistence-layer-hardening.md.
[dependencies]
async-trait.workspace = true
domain_core = { path = "../domain/core" }
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
specta.workspace = true

[lints]
workspace = true
