[package]
name = "audit"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
domain_core = { path = "../domain/core" }
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
specta.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync", "macros", "rt"] }

[lints]
workspace = true
