[package]
name = "audit"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
async-trait.workspace = true
audit_types = { path = "../audit-types" }
domain_core = { path = "../domain/core" }
persistence_core = { path = "../persistence/core" }
persistence_lifecycle = { path = "../persistence/lifecycle" }
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
specta.workspace = true
sqlx.workspace = true
thiserror.workspace = true
time.workspace = true
tokio = { workspace = true, features = ["sync", "macros", "rt"] }
tracing.workspace = true

[lints]
workspace = true
