[package]
name = "patterns"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
unicode-normalization.workspace = true
unicode-security.workspace = true

[dev-dependencies]
serde_json.workspace = true
rstest.workspace = true
proptest.workspace = true

[lints]
workspace = true
