[package]
name = "safe-filename"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Security-conscious sanitization of a single path segment / filename component: NFC normalization, C0/C1/format/bidi-override stripping, Windows reserved-character and device-name rejection, path-traversal rejection, and Unicode-confusables (mixed-script) detection."
keywords = ["filename", "sanitize", "path", "security", "unicode"]
categories = ["filesystem", "text-processing"]

[lib]
path = "src/lib.rs"

[dependencies]
thiserror.workspace = true
unicode-normalization.workspace = true
unicode-security.workspace = true

[dev-dependencies]
proptest.workspace = true
rstest.workspace = true

[lints]
workspace = true
