[package]
name = "sessions"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
domain_core = { path = "../domain/core" }
skymath = "0.4"
thiserror = { workspace = true }
time = { workspace = true }

[dev-dependencies]
uuid = { workspace = true }

[lints]
workspace = true
