[package]
name = "targeting"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

# spec 042 (T250): this is now the PURE catalog crate — query normalization
# (`normalize`) and deterministic UUIDv5 identity (`identity`). The SIMBAD
# on-demand resolver, SQLite resolution cache, and bundled-seed loader (the
# sqlx + reqwest + tokio + async-trait surface) were split into the
# `targeting_resolver` crate so pure consumers no longer pull that weight.

[dependencies]
target-match = "0.1"
uuid = { version = "1", features = ["serde", "v4", "v5"] }
unicode-normalization.workspace = true

[lints]
workspace = true
