[package]
name = "contract_tests"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

[[test]]
name = "contract_schema_parity"
path = "contract_schema_parity.rs"

[[test]]
name = "library_inventory_contract"
path = "library_inventory_contract.rs"

[[test]]
name = "roots_register_test"
path = "roots_register_test.rs"

[[test]]
name = "roots_register_batch_test"
path = "roots_register_batch_test.rs"

[[test]]
name = "firstrun_complete_test"
path = "firstrun_complete_test.rs"

[[test]]
name = "firstrun_restart_test"
path = "firstrun_restart_test.rs"

[[test]]
name = "audit_first_run_completed_test"
path = "audit_first_run_completed_test.rs"

[[test]]
name = "native_contracts_test"
path = "native_contracts_test.rs"

[[test]]
name = "target_resolution_parity_test"
path = "target_resolution_parity_test.rs"

[[test]]
name = "envelope_specta_schemars_agreement"
path = "envelope_specta_schemars_agreement.rs"

[[test]]
name = "project_tool_enum_parity"
path = "project_tool_enum_parity.rs"

[dev-dependencies]
contracts_core = { path = "../../crates/contracts/core" }
domain_core = { path = "../../crates/domain/core" }
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
