[package]
name = "desktop_shell"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"
# Cdylib makes `cargo tauri build` happy; rlib keeps the lib loadable from
# integration tests in this crate (e.g. the tauri-specta binding-export test).
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
app_core = { path = "../../../crates/app/core" }
audit = { path = "../../../crates/audit" }
contracts_core = { path = "../../../crates/contracts/core" }
domain_core = { path = "../../../crates/domain/core" }
persistence_db = { path = "../../../crates/persistence/db" }
serde = { workspace = true }
serde_json.workspace = true
specta = { workspace = true }
specta-typescript = { workspace = true }
sqlx = { workspace = true }
tauri = { workspace = true }
tauri-plugin-dialog = { workspace = true }
tauri-plugin-opener = { workspace = true }
tauri-specta = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
# The `test` feature gates the `tauri::test` module (mock runtime, IPC
# helpers). Only dev-dependencies pull it in so release builds stay clean.
tauri = { workspace = true, features = ["test"] }

[lints]
workspace = true
