[package]
name = "desktop_shell"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"
# Cdylib makes `cargo tauri build` happy; rlib keeps the lib loadable from
# integration tests in this crate (e.g. the tauri-specta binding-export test).
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
app_core = { path = "../../../crates/app/core" }
workflow_profiles = { path = "../../../crates/workflow/profiles" }
audit = { path = "../../../crates/audit" }
targeting = { path = "../../../crates/targeting" }
contracts_core = { path = "../../../crates/contracts/core" }
domain_core = { path = "../../../crates/domain/core" }
fs_inventory = { path = "../../../crates/fs/inventory" }
persistence_db = { path = "../../../crates/persistence/db" }
serde = { workspace = true }
serde_json.workspace = true
specta = { workspace = true }
specta-typescript = { workspace = true }
sqlx = { workspace = true }
tauri = { workspace = true }
tauri-plugin-dialog = { workspace = true }
tauri-plugin-opener = { workspace = true }
tauri-plugin-mcp-bridge = { workspace = true }
tauri-specta = { workspace = true }
# E2E automation surface — ONLY compiled when the `e2e` feature is enabled.
# Release binaries MUST omit this feature so the embedded WebDriver server
# is never present at runtime (Constitution Principle V, mirrors `dev-tools`).
tauri-plugin-webdriver = { version = "0.2", optional = true }
thiserror = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
# The `test` feature gates the `tauri::test` module (mock runtime, IPC
# helpers). Only dev-dependencies pull it in so release builds stay clean.
tauri = { workspace = true, features = ["test"] }

[features]
# Developer-mode surface (spec 021). Release binaries MUST NOT enable this.
# Propagates to app_core so the dev_contracts use-case module is compiled in.
dev-tools = ["app_core/dev-tools"]
# E2E automation gate (spec 037). Embeds tauri-plugin-webdriver so the app
# binary accepts W3C WebDriver sessions from the tauri-webdriver CLI proxy.
# The embedded server listens on 127.0.0.1:4445; the tauri-webdriver CLI
# (cargo install tauri-webdriver --locked) proxies :4444 → :4445.
# Release binaries MUST NOT enable this feature (Constitution Principle V).
e2e = ["dep:tauri-plugin-webdriver"]

[lints]
workspace = true
