[package]
name = "desktop_shell"
version = "0.6.0"
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"
# Cdylib makes `cargo tauri build` happy; rlib keeps the lib loadable from
# integration tests in this crate (e.g. the tauri-specta binding-export test).
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
app_core = { path = "../../../crates/app/core" }
camino = { workspace = true }
workflow_profiles = { path = "../../../crates/workflow/profiles" }
audit = { path = "../../../crates/audit" }
# spec 042 (T250): the SIMBAD resolver/seed surface this shell consumes moved
# from `targeting` into the `targeting_resolver` crate.
targeting_resolver = { path = "../../../crates/targeting/resolver" }
# spec 052 P1: AppState owns the shared redb resolve-cache handle directly
# (Cache trait for .cache()/search, identity::namespace for warming).
simbad-resolver = "0.4.0"
# target.astro_format.batch: sexagesimal RA/Dec formatting (adopt target-match).
targeting = { path = "../../../crates/targeting" }
# target.moon_opposition.batch (#634): geocentric Sun/Moon position
# (sun_position/moon_position — not re-exported by `targeting`, which only
# re-exports the coordinate primitives).
skymath = "0.6.0"
contracts_core = { path = "../../../crates/contracts/core" }
domain_core = { path = "../../../crates/domain/core" }
fs_inventory = { path = "../../../crates/fs/inventory" }
persistence_core = { path = "../../../crates/persistence/core" }
persistence_inbox = { path = "../../../crates/persistence/inbox" }
persistence_lifecycle = { path = "../../../crates/persistence/lifecycle" }
persistence_plans = { path = "../../../crates/persistence/plans" }
persistence_targets = { path = "../../../crates/persistence/targets" }
workflow_artifacts = { path = "../../../crates/workflow/artifacts" }
serde = { workspace = true }
serde_json.workspace = true
specta = { workspace = true }
specta-typescript = { workspace = true }
sqlx = { workspace = true }
tauri = { workspace = true }
tauri-plugin-dialog = { workspace = true }
tauri-plugin-opener = { workspace = true }
tauri-plugin-mcp-bridge = { workspace = true }
# Spec 051 shell integration plugins.
tauri-plugin-single-instance = { workspace = true }
tauri-plugin-window-state = { workspace = true }
tauri-plugin-log = { workspace = true }
tauri-plugin-updater = { workspace = true }
# Relaunch-to-apply step for the updater plugin (spec 051 US10, T056).
tauri-plugin-process = { workspace = true }
tauri-specta = { workspace = true }
# E2E automation surface — ONLY compiled when the `e2e` feature is enabled.
# Release binaries MUST omit this feature so the embedded WebDriver server
# is never present at runtime (Constitution Principle V, mirrors `dev-tools`).
tauri-plugin-webdriver = { version = "0.2", optional = true }
time = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
# Rotating diagnostics log file (spec 051 US7, T041/T042) — alongside stderr.
tracing-appender = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
# The `test` feature gates the `tauri::test` module (mock runtime, IPC
# helpers). Only dev-dependencies pull it in so release builds stay clean.
tauri = { workspace = true, features = ["test"] }
tempfile = { workspace = true }

[features]
# Developer-mode surface (spec 021). Release binaries MUST NOT enable this.
# Propagates to app_core so the dev_contracts use-case module is compiled in.
dev-tools = ["app_core/dev-tools"]
# E2E automation gate (spec 037). Embeds tauri-plugin-webdriver so the app
# binary accepts W3C WebDriver sessions from the tauri-webdriver CLI proxy.
# The embedded server listens on 127.0.0.1:4445; the tauri-webdriver CLI
# (cargo install tauri-webdriver --locked) proxies :4444 → :4445.
# Release binaries MUST NOT enable this feature (Constitution Principle V).
e2e = ["dep:tauri-plugin-webdriver"]

[lints]
workspace = true
