[package]
name = "app_core"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
app_core_calibration = { path = "../calibration" }
audit = { path = "../../audit" }
calibration_core = { path = "../../calibration/core" }
calibration_master_detect = { path = "../../calibration/master-detect" }
workflow_artifacts = { path = "../../workflow/artifacts" }
workflow_profiles = { path = "../../workflow/profiles" }
contracts_core = { path = "../../contracts/core" }
domain_core = { path = "../../domain/core" }
fs_executor = { path = "../../fs/executor" }
metadata_core = { path = "../../metadata/core" }
metadata_fits = { path = "../../metadata/fits" }
metadata_xisf = { path = "../../metadata/xisf" }
metadata_video = { path = "../../metadata/video" }
patterns = { path = "../../patterns" }
persistence_db = { path = "../../persistence/db" }
project_structure = { path = "../../project/structure" }
targeting = { path = "../../targeting" }
targeting_resolver = { path = "../../targeting/resolver" }
anyhow = { workspace = true }
camino = { workspace = true }
dashmap = { workspace = true }
hex.workspace = true
moka = { workspace = true }
serde = { workspace = true }
serde_json.workspace = true
sha2.workspace = true
sqlx.workspace = true
thiserror.workspace = true
time = { workspace = true }
tokio.workspace = true
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
rstest = { workspace = true }
proptest = { workspace = true }
# spec 035 (T020): the `FakeResolver` test double lives behind the resolver's
# `test-fixture` feature; enable it for offline target.resolve use-case tests.
# (spec 042 / T250: moved from `targeting` to `targeting_resolver`.)
targeting_resolver = { path = "../../targeting/resolver", features = ["test-fixture"] }

[features]
# Developer-mode surface (spec 021). Release binaries must NOT enable this.
dev-tools = []

[lints]
workspace = true
