[package]
name = "app_core"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
# Per-domain crate split (spec 042 / T252–T253): the six domain crates plus the
# `errors` leaf kernel are re-exported from `lib.rs` under their original
# `app_core::<domain>` paths. All other modules live in-crate under `src/`.
app_core_calibration = { path = "../calibration" }
app_core_errors = { path = "../errors" }
app_core_inbox = { path = "../inbox" }
app_core_lifecycle = { path = "../lifecycle" }
app_core_projects = { path = "../projects" }
app_core_settings = { path = "../settings" }
app_core_targets = { path = "../targets" }
# Workspace path deps used by the kernel and the in-crate (folded-back) modules.
audit = { path = "../../audit" }
contracts_core = { path = "../../contracts/core" }
domain_core = { path = "../../domain/core" }
fs_executor = { path = "../../fs/executor" }
fs_inventory = { path = "../../fs/inventory" }
patterns = { path = "../../patterns" }
persistence_db = { path = "../../persistence/db" }
project_structure = { path = "../../project/structure" }
workflow_artifacts = { path = "../../workflow/artifacts" }
workflow_profiles = { path = "../../workflow/profiles" }
# In-memory caching layer (F0 foundation).
app_core_cache = { path = "../cache" }
camino = { workspace = true }
dashmap = { workspace = true }
hex.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx.workspace = true
thiserror.workspace = true
time = { workspace = true }
tokio.workspace = true
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
app_core_cache = { path = "../cache" }
tempfile = { workspace = true }
rstest = { workspace = true }
proptest = { workspace = true }
# spec 035 (T020): the `FakeResolver` test double lives behind the resolver's
# `test-fixture` feature; enable it for offline target.resolve use-case tests.
# (spec 042 / T250: moved from `targeting` to `targeting_resolver`.)
targeting_resolver = { path = "../../targeting/resolver", features = ["test-fixture"] }

[features]
# Developer-mode surface (spec 021). Release binaries must NOT enable this.
# Forwards to the extracted `app_core_settings` crate, which owns the `devMode`
# settings-key gate, and compiles the in-crate `dev_contracts` module (gated by
# `#[cfg(feature = "dev-tools")]` in `lib.rs`).
dev-tools = ["app_core_settings/dev-tools"]

[lints]
workspace = true
