[package]
name = "app_core"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
# Per-domain crate split (spec 042 / T252–T253): the six domain crates plus the
# `errors` leaf kernel are re-exported from `lib.rs` under their original
# `app_core::<domain>` paths. All other modules live in-crate under `src/`.
app_core_calibration = { path = "../calibration" }
app_core_errors = { path = "../errors" }
app_core_inbox = { path = "../inbox" }
app_core_lifecycle = { path = "../lifecycle" }
app_core_projects = { path = "../projects" }
app_core_settings = { path = "../settings" }
app_core_targets = { path = "../targets" }
# Workspace path deps used by the kernel and the in-crate (folded-back) modules.
audit = { path = "../../audit" }
contracts_core = { path = "../../contracts/core" }
domain_core = { path = "../../domain/core" }
fs_executor = { path = "../../fs/executor" }
fs_inventory = { path = "../../fs/inventory" }
patterns = { path = "../../patterns" }
persistence_calibration = { path = "../../persistence/calibration" }
persistence_core = { path = "../../persistence/core" }
persistence_inbox = { path = "../../persistence/inbox" }
persistence_lifecycle = { path = "../../persistence/lifecycle" }
persistence_plans = { path = "../../persistence/plans" }
persistence_targets = { path = "../../persistence/targets" }
project_structure = { path = "../../project/structure" }
workflow_artifacts = { path = "../../workflow/artifacts" }
workflow_profiles = { path = "../../workflow/profiles" }
# spec 052 P1: project_create::create threads the shared redb resolve cache
# through to app_core_projects::project_setup::create for in-use promotion.
simbad-resolver = "0.4.0"
# In-memory caching layer (F0 foundation).
app_core_cache = { path = "../cache" }
camino = { workspace = true }
dashmap = { workspace = true }
hex.workspace = true
serde_json.workspace = true
# #1218: session_key parsing goes through the crate that owns the format.
sessions = { path = "../../sessions" }
sha2.workspace = true
sqlx.workspace = true
thiserror.workspace = true
time = { workspace = true }
tokio.workspace = true
tracing = { workspace = true }
# "v5" beyond the workspace default ("v4"): deterministic audit `entity_id`
# derivation for protection/source/root mutations (T123/T125, spec 030
# FR-133), same pattern as `crates/targeting/Cargo.toml`.
uuid = { version = "1", features = ["serde", "v4", "v5"] }

[dev-dependencies]
app_core_cache = { path = "../cache" }
tempfile = { workspace = true }
rstest = { workspace = true }
proptest = { workspace = true }
# spec 052 P1 (resolution_e2e.rs): computes the same deterministic UUIDv5 the
# resolver crate and app_core_targets already derive, to assert target_id
# stability across the redb cache / SQLite promotion boundary.
targeting = { path = "../../targeting" }
# spec 035 (T020): the `FakeResolver` test double lives behind the resolver's
# `test-fixture` feature; enable it for offline target.resolve use-case tests.
# (spec 042 / T250: moved from `targeting` to `targeting_resolver`.)
targeting_resolver = { path = "../../targeting/resolver", features = ["test-fixture"] }
# Enable shared DB test fixtures in tests/support/mod.rs. The test-fixture feature
# gates the `test_support` modules in both persistence crates; must not be
# enabled in production builds.
persistence_core = { path = "../../persistence/core", features = ["test-fixture"] }
persistence_lifecycle = { path = "../../persistence/lifecycle", features = ["test-fixture"] }

[features]
# Developer-mode surface (spec 021). Release binaries must NOT enable this.
# Forwards to the extracted `app_core_settings` crate, which owns the `devMode`
# settings-key gate, and compiles the in-crate `dev_contracts` module (gated by
# `#[cfg(feature = "dev-tools")]` in `lib.rs`).
dev-tools = ["app_core_settings/dev-tools"]

[lints]
workspace = true
